usb/usb.css
dt,
dd {
  float: left;
}
dt {
  clear: left;
  margin-right: 1em;
  min-width: 5em;
}
dt:after {
  content: ':';
}
dl {
  clear: left;
}
.row {
  margin-top: 30px;
}

blockquote {
  font-size: 1em;
  font-style: italic;
}

h2::first-letter,
h3::first-letter,
h4::first-letter {
  font-family: 'Arbutus'
}

h2, h3, h4 {
  font-family: 'Graduate'
}

h1 {
  font-size: 5em;
  color: black;
  font-family: 'Teko';
  text-transform: uppercase;
  white-space: nowrap;
}

header {
  padding: 2em 0;
}

header h2,
header h2::first-letter {
  font-family: 'Marck Script', cursive;
}

header p {
  font-size: 1.8em;
}

header .btn-lg {
  font-size: 1.3em;
  font-style: italic;
}

footer {
  margin-top: 50px;
  margin-bottom: 20px;
}

footer * {
  padding-left: 0;
  display: inline;
  font-weight: bold;
}

#skillcost {
  margin-top: 26px;
}

.logo img {
  margin-left: auto;
}

